@startuml Delivery History Model - Simplified Class Diagram

title Delivery History Model - Core Relationships

class User {
  +_id: ObjectId
  +name: String
  +email: String
  +role: String (user|admin|delivery)
  +phone: String
  +isAvailable: Boolean
  +currentLocation: GeoJSON
  +status: String
  +vehicleType: String
}

class Order {
  +_id: ObjectId
  +user: ObjectId -> User
  +items: Array<FoodItem>
  +totalAmount: Number
  +status: String
  +deliveryAddress: String
  +customerLocation: GeoLocation
  +deliveryMan: ObjectId -> User
  +deliveryRating: Number
  +actualDeliveryTime: Date
}

class DeliveryHistory {
  +_id: ObjectId
  +deliveryManId: ObjectId -> User
  +orderId: ObjectId -> Order
  +customerId: ObjectId -> User
  +pickupLocation: GeoLocation
  +deliveryLocation: GeoLocation
  +routePoints: Array<RoutePoint>
  +totalDistance: Number
  +totalTime: Number
  +averageSpeed: Number
  +statusHistory: Array<StatusEntry>
  +deliveryRating: Number
  +assignedAt: Date
  +deliveredAt: Date
  --
  +addRoutePoint(): Promise
  +updateStatus(): Promise
  +calculateMetrics(): void
  +calculateDistance(): Number
}

class DeliveryHistoryController {
  +getDeliveryHistory(): Promise
  +getDeliveryStats(): Promise
  +createDeliveryHistory(): Promise
  +updateDeliveryStatus(): Promise
  +addRoutePoint(): Promise
}

class DeliveryStats {
  +orders: Array<Order>
  +feedbacks: Array<Order>
  +totalEarnings: Number
  +totalDeliveries: Number
  +monthlyEarnings: Array
  --
  +calculateStatistics(): void
  +renderDashboard(): JSX
}

' Core Relationships
User ||--o{ Order : "places orders"
User ||--o{ DeliveryHistory : "delivers"
User ||--o{ DeliveryHistory : "receives"

Order ||--o{ DeliveryHistory : "tracked by"
Order ||--|| DeliveryHistory : "1:1 relationship"

DeliveryHistoryController ..> DeliveryHistory : "manages"
DeliveryHistoryController ..> Order : "references"
DeliveryHistoryController ..> User : "references"

DeliveryStats ..> DeliveryHistoryController : "fetches data via API"

' Key Relationships Explanation
note top of DeliveryHistory : "**Core Analytics Model**\n\nStores detailed delivery tracking data:\n• GPS route points\n• Performance metrics\n• Status timeline\n• Customer ratings\n\n**Why separate from Order?**\n• Orders = Business transactions\n• DeliveryHistory = Performance analytics"

note right of DeliveryHistory : "**Key Methods:**\n\n• addRoutePoint() - GPS tracking\n• updateStatus() - Status updates\n• calculateMetrics() - Performance calc\n• calculateDistance() - Haversine formula"

note bottom of DeliveryHistory : "**Dashboard Usage:**\n\n• getDeliveryStats() - Aggregated metrics\n• getDeliveryHistory() - Historical data\n• MongoDB aggregation pipelines\n• Performance analytics"

note left of User : "**Delivery Person Role:**\n\n• role = 'delivery'\n• isAvailable = true/false\n• currentLocation = GPS\n• vehicleType = transport info"

note right of Order : "**Basic Order Data:**\n\n• totalAmount - for earnings calc\n• deliveryRating - customer feedback\n• actualDeliveryTime - completion\n• status - delivery state"

@enduml
